<resources>
    <string name="applicaiton_Id">sSiWoPC0K4HzqLziBI6JXDtOgu0AQrj3UYhFfZ3l</string>
    <string name="client_Key">MD9y8cCJqgkdrIuiZCVFDKrwU7Zmg98TfQcm36Sd</string>

    <string name="app_name">Auto-Scheduler</string>
    <string name="action_settings">General Manager</string>
    <string name="man_settings">Manager</string>
    <string name="storeInfo">Store Info</string>
    <string name="addEmployee">Add New Employee</string>
    <string name="promoteDeleteTitle">"%s"</string>
    <string name="promoteToTitle">Promote "%s" to:</string>
    <string name="currentAvailUser">Current Availability</string>
    <string name="reqAvailUser">Requested Availability</string>
    <string name="userScreen">User Options</string>
    <string name="userInfo">Personal Information</string>
    <string name="userAvail">User Availability</string>
    <string name="editPersonalInfo">Change Information</string>
    <string name="editPersonalAvail">Change Availability</string>
    <string name="emailLabel">Email:</string>
    <string name="phoneNumberLabel">Phone Number:</string>
    <string name="numberHint">Enter Phone Number</string>

    <string name="profile_title_logged_in">You are logged in as</string>
    <string name="profile_logout_button_label">Logout</string>
    <string name="enterUsername">Enter username</string>
    <string name="enterName">Enter name</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPhoneNum">Enter phone number</string>
    <string name="enterHireDate">Enter hire date</string>
    <string name="enterBirthDate">Enter birth date</string>
    <string name="isManager">Is manager</string>
    <string name="isGeneralManager">Is general manager</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="empNameLabel">Name:</string>
    <string name="empEmailLabel">Email:</string>
    <string name="empNumberLabel">Phone Number:</string>
    <string name="empBithdayLabel">DOB:</string>
    <string name="empHireDateLabel">Hired Date:</string>
    <string name="empPosStatusLabel">Pos. Held:</string>
    <string name="requests">Time Off Request</string>
    <string name="availability">Availabilty Change Request</string>


    <string name="companyLabel">Company: </string>
    <string name="storeIdLabel">Store ID: </string>
    <string name="sundayHrsText">Sundays Hours:</string>
    <string name="mondayHrsText">Mondays Hours:</string>
    <string name="tuesdayHrsText">Tuesdays Hours:</string>
    <string name="wednesdayHrsText">Wednesdays Hours:</string>
    <string name="thursdayHrsText">Thursdays Hours:</string>
    <string name="fridayHrsText">Fridays Hours:</string>
    <string name="saturdayHrsText">Saturdays Hours:</string>
    <string name="editStoreHrs">Edit Store Hours</string>
    <string name="editStoreInfo">Edit Store Name and ID</string>
    <string name="dash">-</string>
    <string name="buttonSave">Save</string>
    <string name="companyNameHint">Enter Company Name</string>
    <string name="storeIdHint">Enter the store ID</string>
    <string name="editTime">Edit time:</string>
    <string name="schedule">Weekly Schedule</string>
    <string name="userSchedule">User Schedule</string>
    <string name="current_employees">Current Employees</string>
    <string name="makeTimeReq">Time Off Request</string>
    <string name="startingDate">Start Date:</string>
    <string name="endingDate">End Date</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sunStart">Start Sunday</string>
    <string name="sunEnd">End Sunday</string>
    <string name="monStart">Start Monday</string>
    <string name="monEnd">End Monday</string>
    <string name="tuesStart">Start Tuesday</string>
    <string name="tuesEnd">End Tuesday</string>
    <string name="wedStart">Start Wednesday</string>
    <string name="wedEnd">End Wednesday</string>
    <string name="thurStart">Start Thursday</string>
    <string name="thurEnd">End Thursday</string>
    <string name="friStart">Start Friday</string>
    <string name="friEnd">End Friday</string>
    <string name="satStart">Start Saturday</string>
    <string name="satEnd">End Saturday</string>
    <string name="schedHistory">View Schedule History</string>
    <string name="createEditSched">Create/Edit Schedule</string>
    <string name="enterHistoryDate">Enter Dates</string>
    <string name="createSched">Create New Schedule</string>
    <string name="newSched">New Schedule</string>
    <string name="editDay">Edit Date</string>
    <string name="editSched">Edit Schedule</string>


    <string name="sundayOpen">0000</string>
    <string name="sundayClose">2359</string>
    <string name="mondayOpen">0000</string>
    <string name="mondayClose">2359</string>
    <string name="tuesdayOpen">0000</string>
    <string name="tuesdayClose">2359</string>
    <string name="wednesdayOpen">0000</string>
    <string name="wednesdayClose">2359</string>
    <string name="thursdayOpen">0000</string>
    <string name="thursdayClose">2359</string>
    <string name="fridayOpen">0000</string>
    <string name="fridayClose">2359</string>
    <string name="saturdayOpen">0000</string>
    <string name="saturdayClose">2359</string>

    <string name="abSunday">Sun</string>
    <string name="abMonday">Mon</string>
    <string name="abTuesday">Tues</string>
    <string name="abWednesday">Wed</string>
    <string name="abThursday">Thurs</string>
    <string name="abFriday">Fri</string>
    <string name="abSaturday">Sat</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_company_information">Company Information</string>
    <string name="title_activity_edit_store_hours">Edit Store Hours</string>
    <string name="title_activity_edit_company_information">Edit Company Information</string>
    <string name="title_activity_home_screen">Weekly Schedule</string>
    <string name="title_activity_general_manager">General Manager Options</string>
    <string name="title_activity_add_emp">New Employee</string>
    <string name="title_activity_manager">Manager Options</string>
    <string name="title_activity_view_employee_info">Employee Information</string>

    <string name="approvalTitle">Approve/Deny Requests</string>
    <string name="title_activity_view_manager_requests">View Manager Requests</string>
    <string name="title_activity_user_options">User Options</string>
    <string name="title_activity_edit_personal_info">EditPersonalInfo</string>
    <string name="title_activity_edit_personal_avail">EditPersonalAvail</string>
    <string name="title_activity_make_time_off_request">Time Off Request</string>
    <string name="title_activity_create_edit_schedule">Create/Edit Schedule</string>
    <string name="title_activity_schedule_history">Schedule History</string>

    <string name="effectiveDate">Effective Date: </string>
    <string name="editEffectiveDate">Enter effective date</string>
    <string name="title_activity_manager_options">Manager Options</string>
    <string name="deny">Deny</string>
    <string name="approve">Approve</string>
    <string name="title_activity_avail_request">AvailRequest</string>
    <string name="title_activity_view_manager_avail_change">View Manager Availability Change
    </string>
    <string name="title_activity_edit_schedule">Edit Schedule</string>
</resources>
