<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.rkroll.auto_scheduler.HomeScreen">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/man_settings"
        android:orderInCategory="100"
        android:title="@string/man_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/user_options"
        android:orderInCategory="100"
        android:title="@string/userScreen"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/profile_logout_button_label"
        app:showAsAction="never"/>
</menu>
