<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rkroll.auto_scheduler.add_employee"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/username">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterUsername"
                android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/name">
            <EditText
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/enterName"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">
        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/email">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/password">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">
        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/birthDate">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterBirthDate"
                android:inputType="date"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/hireDate">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterHireDate"
                android:inputType="date"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">
        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:id="@+id/phoneNumber">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterPhoneNum"
                android:inputType="number"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="@dimen/checkbox_width"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:id="@+id/Manager"
            android:checked="false"
            android:clickable="true"
            android:onClick="onCheckBoxClicked"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">
        <CheckBox
            android:layout_width="@dimen/checkbox_width"
            android:layout_height="wrap_content"
            android:text="@string/generalManager"
            android:id="@+id/GeneralManager"
            android:checked="false"
            android:clickable="true"
            android:onClick="onCheckBoxClicked"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:layout_column="1"/>

    </TableRow>


</TableLayout>
