<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rkroll.auto_scheduler.EditPersonalInfo"
    tools:showIn="@layout/activity_edit_personal_info"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/topSpace"
            android:text="@string/enterName"
            android:textSize="@dimen/largeText"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:id="@+id/userFullName"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/topSpace"
            android:text="@string/emailLabel"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="@dimen/mediumText"
            android:id="@+id/currentEmail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/topSpace"
            android:text="@string/phoneNumberLabel"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/topSpace"
            android:textSize="@dimen/mediumText"
            android:id="@+id/currentNumber"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/emailLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="@dimen/largeTopSpace"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:hint="@string/enterEmail"
            android:background="@color/inputHighlights"
            android:layout_marginTop="@dimen/largeTopSpace"
            android:id="@+id/editEmail"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/phoneNumberLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="@dimen/topSpace"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"
            android:hint="@string/numberHint"
            android:background="@color/inputHighlights"
            android:id="@+id/editPhoneNumber"
            android:layout_marginTop="@dimen/topSpace"

            />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/topSpace"
        android:text="@string/buttonSave"
        android:id="@+id/saveButton"
        android:layout_gravity="start"/>
</LinearLayout>
